# cslac

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  pyproject.toml  requirements.txt
code/: analyze_faculty.ipynb  constants.py  faculty_scraper.py  faculty_site_analysis.py  faculty_site_scraper.py
data/: colleges.csv  faculty_list.csv  faculty_list_with_field.csv  faculty_list_with_openalex_profile.csv  faculty_list_with_scholar_url.csv  faculty_list_with_verified_profile.csv  faculty_publications.csv
data/course_schedule/: Albion College.csv  Albright College.csv  Amherst College.csv  Augustana College.csv  Austin College.csv  Barnard College.csv  Beloit College.csv  Berea College.csv  Bowdoin College.csv  Bridgewater College.csv  Bryn Athyn College.csv  Bryn Mawr College.csv  Bucknell University.csv  Coe College.csv  (+95 more)
docs/: CNAME  app.js  college_links.json  course_schedule_data.json  data.json  faculty_data.json  generate_college_links.py  generate_course_schedule.py  generate_data.py  generate_logo_sprite.py  index.html  robots.txt  sitemap.xml  style.css
notebooks/: analyze_faculty.ipynb  create_taxonomy.ipynb
scraper/: constants.py  faculty_openalex_profile_scraper.py  faculty_publication_analysis.py  faculty_publication_scraper.py  faculty_publication_venue_tagger.py  faculty_scholar_profile_scraper.py  faculty_scholar_url_scraper.py  faculty_scraper.py  faculty_site_analysis.py  faculty_site_cleaner.py  faculty_site_scraper.py  icore2026.csv  openalex_subfield_map.py  scimagojr.csv  scimagojr_math.csv
web/: faculty_data.json  generate_college_links.py
(+64 files in other folders)
