[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cslac"
version = "0.1.0"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "googlesearch-python",
    "matplotlib",
    "nameparser",
    "pandas",
    "python-dotenv",
    "requests",
    "selenium",
    "torch",
    "tqdm",
    "transformers",
    "wordcloud",
]

[tool.setuptools]
packages = []
